--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -64,7 +64,3 @@
   float: right;
   font-size: 12px;
 }
-
-#tos {
-	width: 300px;
-}
